--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -38,4 +38,28 @@
     <string name="price">السعر</string>
     <string name="current">الحالية</string>
     <string name="previous">السابقة</string>
+    <string name="user_name">اسم المستخدم</string>
+    <string name="licence_image">صورة الرخصة</string>
+    <string name="residence_image">صورة الاقامة</string>
+    <string name="car_form_image">صورة استمارة السيارة</string>
+    <string name="driver_name">اسم السائق</string>
+    <string name="city">المدينة</string>
+    <string name="neighborhood">الحي</string>
+    <string name="create_new_c_account">تسجيل عميل جديد</string>
+    <string name="create_new_g_account">تسجيل بقالة</string>
+    <string name="create_new_d_account">تسجيل سائق</string>
+    <string name="notifications_amp_sounds"><![CDATA[الاشعارات]]></string>
+    <string name="sounds">الاصوات</string>
+    <string name="vibrate">اهتزاز</string>
+    <string name="create_accounts">إنشاء حساب</string>
+    <string name="forget_password">نسيت كلمة المرور ؟</string>
+    <string name="password_login">كلمة المرور</string>
+    <string name="username">إسم المستخدم</string>
+    <string name="login">تسجيل دخول</string>
+    <string name="name_req">الاسم فارغ</string>
+    <string name="phone_req">رقم الجوال فارغ</string>
+    <string name="inv_phone">رقم الجوال غير صحيح</string>
+    <string name="username_req">اسم المستخدم فارغ</string>
+    <string name="password_req">كلمة المرور فارغة</string>
+    <string name="re_pass_req">كلمة المرور غير متطابقة</string>
 </resources>
