--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,28 @@
     <string name="price">Price</string>
     <string name="current">Current</string>
     <string name="previous">Previous</string>
+    <string name="user_name">Username</string>
+    <string name="licence_image">License image</string>
+    <string name="residence_image">Residence image</string>
+    <string name="car_form_image">Car form image</string>
+    <string name="driver_name">Driver name</string>
+    <string name="city">city</string>
+    <string name="neighborhood">Neighborhood</string>
+    <string name="create_new_c_account">Create client account</string>
+    <string name="create_new_g_account">Create grocery account</string>
+    <string name="create_new_d_account">Create driver account</string>
+    <string name="notifications_amp_sounds"><![CDATA[Notifications]]></string>
+    <string name="sounds">Sounds</string>
+    <string name="vibrate">Vibrate</string>
+    <string name="create_accounts">Create account</string>
+    <string name="forget_password">Forget password ?</string>
+    <string name="password_login">Password</string>
+    <string name="username">Username</string>
+    <string name="login">Login</string>
+    <string name="name_req">Name required</string>
+    <string name="phone_req">Phone required</string>
+    <string name="inv_phone">Invalid phone number</string>
+    <string name="username_req">Username required</string>
+    <string name="password_req">Password required</string>
+    <string name="re_pass_req">Re-Password required</string>
 </resources>
